straightened out layout issues

--- a/datamemos/static/datamemos/css/datamemos.css
+++ b/datamemos/static/datamemos/css/datamemos.css
@@ -1,61 +1,15 @@
-body{
-	font-family:verdana,arial,sans-serif;
-	font-size:14px;
-	background:#CCC;
-	width:100%;
+body {
+  font-family: Verdana, Arial, Sans-Serif;
+  font-size: 14px;
+  background-color: #FFF;
 }
-
-a,a:visited{
-	color:#00F;
+#templates {
+  display: none;
 }
-
-.template,#templates{
-	display:none;
-}
-
-.button{
-	padding:3px 7px 5px;
-	text-decoration:none;
-	background-color:#d4d4d4;
-	color:#000;
-	font-weight:500;
-	border:1px #666 solid;
-	border-radius:3px;
-	box-shadow:2px 2px 2px #999;
-}
-.button:hover,.button.hover{
-	background-color:#a9a9a9;
-}
-
-.wrapper{
-	width:960px;
-	margin:12px auto;
-}
-
-.footer,#foot{
-	clear:both;
-	font-size:0.9em;
-}
-
-form input,form textarea{
-	display:block;
-	clear:both;
-}
-form label.radio,form label.checkbox{
-	display:block;
-	position:relative;
-}
-form .radio input,form .checkbox input{
-	display:block;
-	float:left;
-	margin:3px;
-	width:auto;
-	height:auto;
-}
-
-
-#chart,#memo{
-	display:block;
-	float:left;
-	overflow:hidden;
+.wrapper {
+  display: block;
+  margin: 0px 7px;
+  width: auto;
+  background: transparent url('../i/white90.png') repeat top left;
+  color: #333333;
 }
